Edited homepage and login pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Welcome to Firebase Hosting</title>
     <link href="css/index.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.2.0/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -42,7 +43,7 @@
       id="div2"
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
-  
+
     </div>
     <br />
   </body>
