--- a/public/loginpage.html
+++ b/public/loginpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/signin.css" rel="stylesheet" />
-  
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <form>
@@ -12,7 +12,7 @@
       </div>
 
       <div class="container">
-        <label for="uname"><b>email</b></label>
+        <label for="uname"><b>E-mail</b></label>
         <input
           type="text"
           id="name"
@@ -37,7 +37,7 @@
         </label>
       </div>
 
-      <div class="container" style="background-color:#f1f1f1">
+      <div class="container" style="background-color:black">
         <button type="button" class="cancelbtn">Cancel</button>
       </div>
     </form>
