Added logo to login and index pages

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
     </script>
   </head>
   <body">
-    <div style="text-align:center;">
-      <button><h1>Grocery</h1></button>
+    <div id="logo" style="text-align:center;">
+      <button><input type="image" src="D3_logo.png" alt="Logo" width="350" height="350"></button>
     </div>
 
     <div
