--- a/public/loginpage.html
+++ b/public/loginpage.html
@@ -8,7 +8,7 @@
   <body>
     <form>
       <div class="imgcontainer">
-        <img src="images/AJO.JPG" alt="Avatar" class="avatar" />
+        <img src="D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
       </div>
 
       <div class="container">
@@ -37,10 +37,10 @@
         </label>
       </div>
 
-      <div class="container" style="background-color:black">
+      <!-- <div class="container" style="background-color:black">
         <button type="button" class="cancelbtn">Cancel</button>
       </div>
-    </form>
+    </form> -->
     <!-- <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script> -->
 
     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
