Added logo-part 2

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body">
     <div id="logo" style="text-align:center;">
-      <button><input type="image" src="D3_logo.png" alt="Logo" width="350" height="350"></button>
+      <button><input type="image" src="images/D3_logo.png" alt="Logo" width="350" height="350"></button>
     </div>
 
     <div
