--- a/public/loginpage.html
+++ b/public/loginpage.html
@@ -8,7 +8,7 @@
   <body>
     <form>
       <div class="imgcontainer">
-        <img src="D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
+        <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
       </div>
 
       <div class="container">
