Added cart as a link(has to be connected to an actual cart)

--- a/public/home.html
+++ b/public/home.html
@@ -36,5 +36,8 @@
       <input type="text" placeholder="Search for products" name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+    <div class="cart">
+      <a><input type="image" src="images/cart_icon.png" alt="Logo" width="70" height="70"></a>
+  </div>
   </body>
 </html>
