added sample product cards row

--- a/public/home.html
+++ b/public/home.html
@@ -39,5 +39,49 @@
     <div class="cart">
       <a><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80"></a>
   </div>
+
+
+
+  <section class= "products">
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="images/banana.jpg" alt="Banana" style="width:70%">
+          <h1>Banana</h1>
+          <p class="price">$0.50</p>
+          <p><button>Add to Cart</button></p>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+        <img src="images/banana.jpg" alt="Banana" style="width:70%">
+        <h1>Banana</h1>
+        <p class="price">$0.50</p>
+        <p><button>Add to Cart</button></p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+      <img src="images/banana.jpg" alt="Banana" style="width:70%">
+      <h1>Banana</h1>
+      <p class="price">$0.50</p>
+      <p><button>Add to Cart</button></p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+      <img src="images/banana.jpg" alt="Banana" style="width:70%">
+        <h1>Banana</h1>
+          <p class="price">$0.50</p>
+          <p><button>Add to Cart</button></p>
+        </div>
+        </div>
+</div>
+
+</section>
+</div>
   </body>
 </html>
