Added 20 products(fruits, juices, milk, bread, alcohol)

--- a/public/home.html
+++ b/public/home.html
@@ -43,44 +43,209 @@
 
 
   <section class= "products">
+
+  <!-- Row 1 of products -->
     <div class="row">
+        <!-- banana: $0.50 -->
       <div class="column">
         <div class="card">
-          <img src="images/banana.jpg" alt="Banana" style="width:70%">
+          <img src="images/banana.jpg" alt="Banana" width = "80" height="80">
           <h1>Banana</h1>
           <p class="price">$0.50</p>
           <p><button>Add to Cart</button></p>
         </div>
       </div>
-
+<!-- apple: $0.75 -->
       <div class="column">
         <div class="card">
-        <img src="images/banana.jpg" alt="Banana" style="width:70%">
-        <h1>Banana</h1>
-        <p class="price">$0.50</p>
+        <img src="images/apple.jpg" alt="Apple" width = "80" height="80">
+        <h1>Apple</h1>
+        <p class="price">$0.75</p>
         <p><button>Add to Cart</button></p>
       </div>
     </div>
-
+<!-- strawberry: $0.90 -->
     <div class="column">
       <div class="card">
-      <img src="images/banana.jpg" alt="Banana" style="width:70%">
-      <h1>Banana</h1>
-      <p class="price">$0.50</p>
+      <img src="images/strawberry.jpg" alt="Strawberry" width = "80" height="80">
+      <h1>Strawberry</h1>
+      <p class="price">$0.90</p>
       <p><button>Add to Cart</button></p>
       </div>
     </div>
-
+<!-- orange: $0.50 -->
     <div class="column">
       <div class="card">
-      <img src="images/banana.jpg" alt="Banana" style="width:70%">
-        <h1>Banana</h1>
+      <img src="images/orange.jpg" alt="Orange" width = "80" height="80">
+        <h1>Orange</h1>
           <p class="price">$0.50</p>
           <p><button>Add to Cart</button></p>
         </div>
         </div>
 </div>
+<br>
+<!-- Row 2 of products -->
+<div class="row">
+    <!-- 2% milk: $2.50 -->
+  <div class="column">
+    <div class="card">
+      <img src="images/2%milk.jpg" alt="2% Milk" width = "80" height="80" >
+      <h1>2% <br> Milk</h1>
+      <p class="price">$2.50</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+  </div>
+<!-- Whole milk: $2.75 -->
+  <div class="column">
+    <div class="card">
+    <img src="images/wholemilk.jpg" alt="wholemilk" width = "80" height="80">
+    <h1>Whole <br>Milk</h1>
+    <p class="price">$2.75</p>
+    <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- Half-and-half milk: $2.90 -->
+<div class="column">
+  <div class="card">
+  <img src="images/half&half.jpg" alt="Half and Half" width = "80" height="80">
+  <h1>Half and <br>Half Milk</h1>
+  <p class="price">$2.90</p>
+  <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- chocolatemilk: $3.50 -->
+<div class="column">
+  <div class="card">
+  <img src="images/chocolatemilk.jpg" alt="chocolatemilk" width = "80" height="80" >
+    <h1>Chocolate<br> Milk</h1>
+      <p class="price">$3.50</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+    </div>
+</div>
 
+<br>
+<!-- Row 23of products -->
+<div class="row">
+    <!-- Apple juice: $1.50 -->
+  <div class="column">
+    <div class="card">
+      <img src="images/applejuice.jpeg" alt="apple juice" width = "80" height="80" >
+      <h1>Apple juice</h1>
+      <p class="price">$1.50</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+  </div>
+<!-- Orange juice: $1.50 -->
+  <div class="column">
+    <div class="card">
+    <img src="images/orangejuice.jpg" alt="orange juice" width = "80" height="80">
+    <h1>Orange juice</h1>
+    <p class="price">$1.50</p>
+    <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- Pineapple juice: $1.50 -->
+<div class="column">
+  <div class="card">
+  <img src="images/pineapplejuice.jpg" alt="pineapple juice" width = "80" height="80">
+  <h1>Pineapple juice</h1>
+  <p class="price">$1.50</p>
+  <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- chocolatemilk: $1.50 -->
+<div class="column">
+  <div class="card">
+  <img src="images/mixedfruitjuice.jpg" alt="mixed fruit juice" width = "80" height="80" >
+    <h1>Mixed fruit juice</h1>
+      <p class="price">$1.50</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+    </div>
+</div>
+
+<br>
+<!-- Row 4 of products -->
+<div class="row">
+    <!-- White bread: $2.25 -->
+  <div class="column">
+    <div class="card">
+      <img src="images/whitebread.jpg" alt="White bread" width = "80" height="80" >
+      <h1>White<br> bread</h1>
+      <p class="price">$2.25</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+  </div>
+<!-- Wheat bread: $2.50 -->
+  <div class="column">
+    <div class="card">
+    <img src="images/wheatbread.jpg" alt="wheatbread" width = "80" height="80">
+    <h1>Wheat<br> bread</h1>
+    <p class="price">$2.50</p>
+    <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- Multi-grain bread: $2.90 -->
+<div class="column">
+  <div class="card">
+  <img src="images/multigrainbread.jpg" alt="Multi-grain bread" width = "80" height="80">
+  <h1>Multigrain bread</h1>
+  <p class="price">$2.90</p>
+  <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- bananabread: $3 -->
+<div class="column">
+  <div class="card">
+  <img src="images/bananabread.jpg" alt="bananabread" width = "80" height="80" >
+    <h1>Banana<br> bread</h1>
+      <p class="price">$3.00</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+    </div>
+</div>
+
+<br>
+<!-- Row 5 of products -->
+<div class="row">
+    <!-- Beer: $2.00-->
+  <div class="column">
+    <div class="card">
+      <img src="images/beer.jpg" alt="Beer" width = "80" height="80" >
+      <h1>Beer</h1>
+      <p class="price">$2.00</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+  </div>
+<!-- Vodka: $20.00 -->
+  <div class="column">
+    <div class="card">
+    <img src="images/vodka.jpg" alt="vodka" width = "80" height="80">
+    <h1>Vodka</h1>
+    <p class="price">$20.00</p>
+    <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- Whiskey: $15.00-->
+<div class="column">
+  <div class="card">
+  <img src="images/whiskey.jpg" alt="whiskey" width = "80" height="80">
+  <h1>Whiskey</h1>
+  <p class="price">$15</p>
+  <p><button>Add to Cart</button></p>
+  </div>
+</div>
+<!-- Rum: $18.00 -->
+<div class="column">
+  <div class="card">
+  <img src="images/rum.jpg" alt="rum" width = "80" height="80" >
+    <h1>Rum</h1>
+      <p class="price">$18.00</p>
+      <p><button>Add to Cart</button></p>
+    </div>
+    </div>
+</div>
 </section>
 </div>
   </body>
