renamed 2% milk to 2milk

--- a/public/home.html
+++ b/public/home.html
@@ -89,7 +89,7 @@
     <!-- 2% milk: $2.50 -->
   <div class="column">
     <div class="card">
-      <img src="images/2%milk.jpg" alt="2% Milk" width = "80" height="80" >
+      <img src="images/2milk.jpg" alt="2% Milk" width = "80" height="80" >
       <h1>2% <br> Milk</h1>
       <p class="price">$2.50</p>
       <p><button>Add to Cart</button></p>
