added account page, connected home, cart, checkout

--- a/public/account.html
+++ b/public/account.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Welcome to Firebase Hosting</title>
-    <link href="css/cart.css" rel="stylesheet" />
+    <link href="css/account.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- update the version number as needed -->
@@ -36,24 +36,14 @@
       <input type="text" placeholder="Search for products" name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
-    <section class="items">
-    <div class="col-25">
-      <div class="container">
-        <h4>Cart
-          <span class="price" style="color:black">
-            <i class="fa fa-shopping-cart"></i>
-            <b>4</b>
-          </span>
-        </h4>
-        <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-        <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-        <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-        <p><a href="#">Product 4</a> <span class="price">$2</span></p>
-        <hr>
-        <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
-        <a href="checkout.html"><input type="submit" value="Continue to checkout" class="btn"></a>
-      </div>
-    </div>
+    <div class="cart">
+      <a><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80" target="cart.html"></a>
+  </div>
+
+
+
+  <section class= "info">
+
 </section>
-</body>
+  </body>
 </html>
