--- a/public/home.html
+++ b/public/home.html
@@ -36,8 +36,11 @@
       <input type="text" placeholder="Search for products" name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+    <div class="account">
+      <a href="account.html" alt="account" height="80">My Account</a>
+    </div>
     <div class="cart">
-      <a><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80"></a>
+      <a href="cart.html"><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80" ></a>
   </div>
 
 
