Edited signup page and account information page

--- a/public/signup.html
+++ b/public/signup.html
@@ -31,12 +31,12 @@
           required
         />
 
-        <label for="uname"><b>Address (Street Address, City, State, Zipcode) </b></label>
+        <label for="address"><b>Address (Street Address, City, State, Zipcode) </b></label>
         <input
           type="text"
-          id="name"
-          placeholder="Enter Username"
-          name="uname"
+          id="address"
+          placeholder="Enter address"
+          name="address"
           required
         />
         <button type="button" id="sign" onclick="validate()">Login</button>
