--- a/public/account.html
+++ b/public/account.html
@@ -29,9 +29,8 @@
     </script>
   </head>
   <body>
-    <div class="imgcontainer">
-      <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150" align= "left"/>
-    </div>
+    <section>
+
     <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
       <input type="text" placeholder="Search for products" name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
@@ -40,10 +39,84 @@
       <a><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80" target="cart.html"></a>
   </div>
 
-
-
   <section class= "info">
+      <h1><center>Account Information</center></h1>
+    <form>
+      <div class="imgcontainer">
+        <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
+      </div>
 
+      <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input
+          type="text"
+          id="name"
+          placeholder="Enter Username"
+          name="uname"
+          required
+        />
+
+        <label for="fname"><b>First Name</b></label>
+        <input
+          type="text"
+          id="fname"
+          placeholder="First Name"
+          name="fname"
+          required
+        />
+        <label for="uname"><b>Last Name</b></label>
+          <input
+            type="text"
+            id="lname"
+            placeholder="Last Name"
+            name="lname"
+            required
+          />
+        <label for="psw"><b>Password</b></label>
+        <input
+          type="password"
+          placeholder="Enter Password"
+          name="psw"
+          id="pswd"
+          required
+        />
+
+        <label for="address"><b>Address (Street Address, City, State, Zipcode) </b></label>
+        <input
+          type="text"
+          id="name"
+          placeholder="Address"
+          name="address"
+          required
+        />
+
+        <label for="ccardnum"><b>Credit card number</b></label>
+        <input
+          type="text"
+          id="name"
+          placeholder="Credit card number"
+          name="uname"
+          required
+        />
+        <label for="expiration"><b>Expiration date(mm/yy) </b></label>
+        <input
+          type="text"
+          id="expiration"
+          placeholder="mm/yy"
+          name="expiration"
+          required
+        />
+        <label for="cvv"><b>CVV </b></label>
+        <input
+          type="text"
+          id="cvv"
+          placeholder="cvv"
+          name="cvv"
+          required
+        />
+        <button type="button" id="save_changes" >Save changes</button>
+
+      </div>
 </section>
   </body>
 </html>
