edited all pages so logo takes you to home page

--- a/public/account.html
+++ b/public/account.html
@@ -35,15 +35,13 @@
       <input type="text" placeholder="Search for products" name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
-    <div class="cart">
-      <a><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80" target="cart.html"></a>
-  </div>
+
 
   <section class= "info">
       <h1><center>Account Information</center></h1>
     <form>
       <div class="imgcontainer">
-        <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
+        <a href="home.html"><img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/></a>
       </div>
 
       <div class="container">
