--- a/public/cart.html
+++ b/public/cart.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class="imgcontainer">
-      <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150" align= "left"/>
+      <a href="home.html"><img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150" align= "left"/></a>
     </div>
     <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
       <input type="text" placeholder="Search for products" name="search">
