--- a/public/signup.html
+++ b/public/signup.html
@@ -39,7 +39,7 @@
           name="address"
           required
         />
-        <button type="button" id="sign" onclick="validate()">Login</button>
+        <button type="button" id="sign" onclick="validate()">Signup</button>
         <label>
           <input type="checkbox" checked="checked" name="remember" /> Remember
           me
