--- a/public/home.html
+++ b/public/home.html
@@ -46,14 +46,15 @@
 
 
   <section class= "products">
-
   <!-- Row 1 of products -->
     <div class="row">
         <!-- banana: $0.50 -->
       <div class="column">
         <div class="card">
-          <img src="images/banana.jpg" alt="Banana" width = "80" height="80">
+        <a class="nutrition" href="images/bananainfo.jpg">
+          <img src="images/banana.jpg" class= "pimage" alt="Banana" width = "80" height="80"></a>
           <h1 class="pname">Banana</h1>
+
           <p class="price">$0.50</p>
           <p><button class="add-to-cart">Add to Cart</button></p>
         </div>
@@ -61,7 +62,9 @@
 <!-- apple: $0.75 -->
       <div class="column">
         <div class="card">
-        <img src="images/apple.jpg" alt="Apple" width = "80" height="80">
+          <a class="nutrition" href="images/appleinfo.jpg">
+        <img src="images/apple.jpg" class= "pimage" alt="Apple" width = "80" height="80">
+      </a>
         <h1 class="pname">Apple</h1>
         <p class="price">$0.75</p>
         <p><button class="add-to-cart">Add to Cart</button></p>
@@ -70,7 +73,9 @@
 <!-- strawberry: $0.90 -->
     <div class="column">
       <div class="card">
-      <img src="images/strawberry.jpg" alt="Strawberry" width = "80" height="80">
+        <a class="nutrition" href="images/strawberryinfo.jpg">
+      <img src="images/strawberry.jpg" class= "pimage" alt="Strawberry" width = "80" height="80">
+    </a>
       <h1 class="pname">Strawberry</h1>
       <p class="price">$0.90</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -79,7 +84,9 @@
 <!-- orange: $0.50 -->
     <div class="column">
       <div class="card">
-      <img src="images/orange.jpg" alt="Orange" width = "80" height="80">
+        <a class="nutrition" href="images/orangeinfo.jpg">
+      <img src="images/orange.jpg" class= "pimage" alt="Orange" width = "80" height="80">
+    </a>
         <h1 class="pname">Orange</h1>
           <p class="price">$0.50</p>
           <p><button class="add-to-cart">Add to Cart</button></p>
@@ -92,7 +99,9 @@
     <!-- 2% milk: $2.50 -->
   <div class="column">
     <div class="card">
-      <img src="images/2milk.jpg" alt="2% Milk" width = "80" height="80" >
+      <a class="nutrition" href="images/2%milkinfo.jpg">
+      <img src="images/2milk.jpg" class= "pimage" alt="2% Milk" width = "80" height="80" >
+    </a>
       <h1 class="pname">2% <br> Milk</h1>
       <p class="price">$2.50</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -101,7 +110,9 @@
 <!-- Whole milk: $2.75 -->
   <div class="column">
     <div class="card">
-    <img src="images/wholemilk.jpg" alt="wholemilk" width = "80" height="80">
+      <a class="nutrition" href="images/wholemilkinfo.jpg">
+    <img src="images/wholemilk.jpg" class= "pimage" alt="wholemilk" width = "80" height="80">
+  </a>
     <h1 class="pname">Whole <br>Milk</h1>
     <p class="price">$2.75</p>
     <p><button class="add-to-cart">Add to Cart</button></p>
@@ -110,7 +121,9 @@
 <!-- Half-and-half milk: $2.90 -->
 <div class="column">
   <div class="card">
-  <img src="images/half&half.jpg" alt="Half and Half" width = "80" height="80">
+    <a class="nutrition" href="images/half&halfinfo.jpg">
+  <img src="images/half&half.jpg" class= "pimage" alt="Half and Half" width = "80" height="80">
+</a>
   <h1 class="pname">Half and <br>Half Milk</h1>
   <p class="price">$2.90</p>
   <p><button class="add-to-cart">Add to Cart</button></p>
@@ -119,7 +132,9 @@
 <!-- chocolatemilk: $3.50 -->
 <div class="column">
   <div class="card">
-  <img src="images/chocolatemilk.jpg" alt="chocolatemilk" width = "80" height="80" >
+    <a class="nutrition" href="images/chocolatemilkinfo.jpg">
+  <img src="images/chocolatemilk.jpg" class= "pimage" alt="chocolatemilk" width = "80" height="80" >
+</a>
     <h1 class="pname">Chocolate<br> Milk</h1>
       <p class="price">$3.50</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -133,7 +148,9 @@
     <!-- Apple juice: $1.50 -->
   <div class="column">
     <div class="card">
-      <img src="images/applejuice.jpeg" alt="apple juice" width = "80" height="80" >
+      <a class="nutrition" href="images/applejuiceinfo.jpg">
+      <img src="images/applejuice.jpeg" class= "pimage" alt="apple juice" width = "80" height="80" >
+    </a>
       <h1 class="pname">Apple juice</h1>
       <p class="price">$1.50</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -142,7 +159,9 @@
 <!-- Orange juice: $1.50 -->
   <div class="column">
     <div class="card">
-    <img src="images/orangejuice.jpg" alt="orange juice" width = "80" height="80">
+      <a class="nutrition" href="images/orangejuiceinfo.jpg">
+    <img src="images/orangejuice.jpg" class= "pimage" alt="orange juice" width = "80" height="80">
+  </a>
     <h1 class="pname">Orange juice</h1>
     <p class="price">$1.50</p>
     <p><button class="add-to-cart">Add to Cart</button></p>
@@ -151,7 +170,9 @@
 <!-- Pineapple juice: $1.50 -->
 <div class="column">
   <div class="card">
-  <img src="images/pineapplejuice.jpg" alt="pineapple juice" width = "80" height="80">
+    <a class="nutrition" href="images/pineapplejuiceinfo.jpg">
+  <img src="images/pineapplejuice.jpg" class= "pimage" alt="pineapple juice" width = "80" height="80">
+</a>
   <h1 class="pname">Pineapple juice</h1>
   <p class="price">$1.50</p>
   <p><button class="add-to-cart">Add to Cart</button></p>
@@ -160,7 +181,9 @@
 <!-- chocolatemilk: $1.50 -->
 <div class="column">
   <div class="card">
-  <img src="images/mixedfruitjuice.jpg" alt="mixed fruit juice" width = "80" height="80" >
+    <a class="nutrition" href="images/mixedfruitjuiceinfo.jpg">
+  <img src="images/mixedfruitjuice.jpg" class= "pimage" alt="mixed fruit juice" width = "80" height="80" >
+</a>
     <h1 class="pname">Mixed fruit juice</h1>
       <p class="price">$1.50</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -174,7 +197,7 @@
     <!-- White bread: $2.25 -->
   <div class="column">
     <div class="card">
-      <img src="images/whitebread.jpg" alt="White bread" width = "80" height="80" >
+      <img src="images/whitebread.jpg"class= "pimage" alt="White bread" width = "80" height="80" >
       <h1 class="pname">White<br> bread</h1>
       <p class="price">$2.25</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -183,7 +206,7 @@
 <!-- Wheat bread: $2.50 -->
   <div class="column">
     <div class="card">
-    <img src="images/wheatbread.jpg" alt="wheatbread" width = "80" height="80">
+    <img src="images/wheatbread.jpg" class= "pimage" alt="wheatbread" width = "80" height="80">
     <h1 class="pname">Wheat<br> bread</h1>
     <p class="price">$2.50</p>
     <p><button class="add-to-cart">Add to Cart</button></p>
@@ -192,7 +215,7 @@
 <!-- Multi-grain bread: $2.90 -->
 <div class="column">
   <div class="card">
-  <img src="images/multigrainbread.jpg" alt="Multi-grain bread" width = "80" height="80">
+  <img src="images/multigrainbread.jpg" class= "pimage" alt="Multi-grain bread" width = "80" height="80">
   <h1 class="pname">Multigrain bread</h1>
   <p class="price">$2.90</p>
   <p><button class="add-to-cart">Add to Cart</button></p>
@@ -201,7 +224,7 @@
 <!-- bananabread: $3 -->
 <div class="column">
   <div class="card">
-  <img src="images/bananabread.jpg" alt="bananabread" width = "80" height="80" >
+  <img src="images/bananabread.jpg" class= "pimage" alt="bananabread" width = "80" height="80" >
     <h1 class="pname">Banana<br> bread</h1>
       <p class="price">$3.00</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -215,7 +238,9 @@
     <!-- Beer: $2.00-->
   <div class="column">
     <div class="card">
-      <img src="images/beer.jpg" alt="Beer" width = "80" height="80" >
+      <a class="alcoholcontent" href="images/beerinfo.jpg">
+      <img src="images/beer.jpg" class= "pimage" alt="Beer" width = "80" height="80" >
+    </a>
       <h1 class="pname">Beer</h1>
       <p class="price">$2.00</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
@@ -224,7 +249,9 @@
 <!-- Vodka: $20.00 -->
   <div class="column">
     <div class="card">
-    <img src="images/vodka.jpg" alt="vodka" width = "80" height="80">
+      <a class="alcoholcontent" href="images/vodkainfo.jpg">
+    <img src="images/vodka.jpg" class= "pimage" alt="vodka" width = "80" height="80">
+  </a>
     <h1 class="pname">Vodka</h1>
     <p class="price">$20.00</p>
     <p><button class="add-to-cart">Add to Cart</button></p>
@@ -233,7 +260,9 @@
 <!-- Whiskey: $15.00-->
 <div class="column">
   <div class="card">
-  <img src="images/whiskey.jpg" alt="whiskey" width = "80" height="80">
+    <a class="alcoholcontent" href="images/whiskeyinfo.jpg">
+  <img src="images/whiskey.jpg" class= "pimage"  alt="whiskey" width = "80" height="80">
+</a>
   <h1 class="pname">Whiskey</h1>
   <p class="price">$15</p>
   <p><button class="add-to-cart">Add to Cart</button></p>
@@ -242,7 +271,9 @@
 <!-- Rum: $18.00 -->
 <div class="column">
   <div class="card">
-  <img src="images/rum.jpg" alt="rum" width = "80" height="80" >
+    <a class="alcoholcontent" href="images/ruminfo.jpg">
+  <img src="images/rum.jpg" class= "pimage" alt="rum" width = "80" height="80" >
+</a>
     <h1 class="pname">Rum</h1>
       <p class="price">$18.00</p>
       <p><button class="add-to-cart">Add to Cart</button></p>
