--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       });
     </script>
   </head>
-  <body">
+  <body>
     <div id="logo" style="text-align:center;">
       <button><input type="image" src="images/D3_logo.png" alt="Logo" width="350" height="350"></button>
     </div>
@@ -37,13 +37,14 @@
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
       <a href="loginpage.html">Sign In</a>
+      
     </div>
     <br />
     <div
       id="div2"
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
-
+    <a href="signup.html">Sign UP</a>
     </div>
     <br />
   </body>
