--- a/public/signup.html
+++ b/public/signup.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <link href="css/signin.css" rel="stylesheet" />
     <script src="login.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
-    <form>
+    <form class="form" action="process.php" method="POST" enctype="multipart/form-data">
       <div class="imgcontainer">
         <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
       </div>
@@ -39,7 +41,7 @@
           name="address"
           required
         />
-        <button type="button" id="sign" onclick="validate()">Signup</button>
+        <button type="submit" id="sign" name='save'>Signup</button>
         <label>
           <input type="checkbox" checked="checked" name="remember" /> Remember
           me
@@ -63,4 +65,4 @@
     <!-- <script src="/__/firebase/init.js"></script> -->
 
   </body>
-</html>
+  </html>
