--- a/signup.html
+++ b/signup.html
@@ -47,11 +47,11 @@
           me
         </label>
       </div>
-
+    </form> 
       <!-- <div class="container" style="background-color:black">
         <button type="button" class="cancelbtn">Cancel</button>
       </div>
-    </form> -->
+   
     <!-- <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script> -->
 
     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
