sign up works now

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       id="div1"
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
-      <a href="loginpage.html">Sign In</a>
+      <a href="loginpage.php">Sign In</a>
       
     </div>
     <br />
