--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
-    <form class="form" action="process.php" method="POST" enctype="multipart/form-data">
+    <form class="form" action="sign_up.php" method="POST" enctype="multipart/form-data">
       <div class="imgcontainer">
         <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150"/>
       </div>
