made cart look nice and work with the home page

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
     <a href="account.html" alt="account" height="80">My Account</a>
   </div>
   <div class="cart">
-    <a href="cart.html"><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80"></a>
+    <a href="#cart"><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80"></a>
   </div>
 
 
@@ -287,8 +287,8 @@
   </section>
 
   <!-- section for cart -->
-  <section class="container content-section">
-    <h2 class="section-header">CART</h2>
+  <section class="container-content-section">
+    <h2 class="section-header"><a name="cart">CART</a></h2>
     <div class="cart-row">
       <span class="cart-item cart-header cart-column">ITEM</span>
       <span class="cart-price cart-header cart-column">PRICE</span>
@@ -301,7 +301,7 @@
       <strong class="cart-total-title">Total</strong>
       <span class="cart-total-price">$0</span>
     </div>
-    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+    <button class="btn-checkout" type="button">PURCHASE</button>
   </section>
   </div>
 </body>
