Added types to products and replaced mixed fruit juice with grape juice

--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
           <a class="nutrition" href="images/bananainfo.jpg">
             <img src="images/banana.jpg" class="pimage" alt="Banana" width="80" height="80"></a>
           <h1 class="pname">Banana</h1>
-
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -70,6 +70,7 @@
             <img src="images/apple.jpg" class="pimage" alt="Apple" width="80" height="80">
           </a>
           <h1 class="pname">Apple</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.75</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -81,6 +82,7 @@
             <img src="images/strawberry.jpg" class="pimage" alt="Strawberry" width="80" height="80">
           </a>
           <h1 class="pname">Strawberry</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.90</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -92,6 +94,7 @@
             <img src="images/orange.jpg" class="pimage" alt="Orange" width="80" height="80">
           </a>
           <h1 class="pname">Orange</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -107,6 +110,7 @@
             <img src="images/2milk.jpg" class="pimage" alt="2% Milk" width="80" height="80">
           </a>
           <h1 class="pname">2% <br> Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$2.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -118,6 +122,7 @@
             <img src="images/wholemilk.jpg" class="pimage" alt="wholemilk" width="80" height="80">
           </a>
           <h1 class="pname">Whole <br>Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$2.75</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -129,6 +134,7 @@
             <img src="images/half&half.jpg" class="pimage" alt="Half and Half" width="80" height="80">
           </a>
           <h1 class="pname">Half and <br>Half Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$2.90</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -140,6 +146,7 @@
             <img src="images/chocolatemilk.jpg" class="pimage" alt="chocolatemilk" width="80" height="80">
           </a>
           <h1 class="pname">Chocolate<br> Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$3.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -156,6 +163,7 @@
             <img src="images/applejuice.jpeg" class="pimage" alt="apple juice" width="80" height="80">
           </a>
           <h1 class="pname">Apple juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -167,6 +175,7 @@
             <img src="images/orangejuice.jpg" class="pimage" alt="orange juice" width="80" height="80">
           </a>
           <h1 class="pname">Orange juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -178,6 +187,7 @@
             <img src="images/pineapplejuice.jpg" class="pimage" alt="pineapple juice" width="80" height="80">
           </a>
           <h1 class="pname">Pineapple juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -185,10 +195,11 @@
       <!-- chocolatemilk: $1.50 -->
       <div class="column">
         <div class="card">
-          <a class="nutrition" href="images/mixedfruitjuiceinfo.jpg">
-            <img src="images/mixedfruitjuice.jpg" class="pimage" alt="mixed fruit juice" width="80" height="80">
+          <a class="nutrition" href="images/grapejuiceinfo.jpg">
+            <img src="images/grapejuice.jpg" class="pimage" alt="grape juice" width="80" height="80">
           </a>
-          <h1 class="pname">Mixed fruit juice</h1>
+          <h1 class="pname">Grape juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -203,6 +214,7 @@
         <div class="card">
           <img src="images/whitebread.jpg" class="pimage" alt="White bread" width="80" height="80">
           <h1 class="pname">White<br> bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$2.25</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -212,6 +224,7 @@
         <div class="card">
           <img src="images/wheatbread.jpg" class="pimage" alt="wheatbread" width="80" height="80">
           <h1 class="pname">Wheat<br> bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$2.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -221,6 +234,7 @@
         <div class="card">
           <img src="images/multigrainbread.jpg" class="pimage" alt="Multi-grain bread" width="80" height="80">
           <h1 class="pname">Multigrain bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$2.90</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -230,6 +244,7 @@
         <div class="card">
           <img src="images/bananabread.jpg" class="pimage" alt="bananabread" width="80" height="80">
           <h1 class="pname">Banana<br> bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$3.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -246,6 +261,7 @@
             <img src="images/beer.jpg" class="pimage" alt="Beer" width="80" height="80">
           </a>
           <h1 class="pname">Beer</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$2.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -257,6 +273,7 @@
             <img src="images/vodka.jpg" class="pimage" alt="vodka" width="80" height="80">
           </a>
           <h1 class="pname">Vodka</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$20.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -268,6 +285,7 @@
             <img src="images/whiskey.jpg" class="pimage" alt="whiskey" width="80" height="80">
           </a>
           <h1 class="pname">Whiskey</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$15</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -279,6 +297,7 @@
             <img src="images/rum.jpg" class="pimage" alt="rum" width="80" height="80">
           </a>
           <h1 class="pname">Rum</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$18.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
