Added staff login button

--- a/home.html
+++ b/home.html
@@ -40,11 +40,14 @@
     <input type="text" placeholder="Search for products" name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
+  <div class="staff-login">
+    <a href="staff-login.html" alt="staff-login" height="80">Staff login</a>
+  </div>
   <div class="account">
     <a href="account.html" alt="account" height="80">My Account</a>
   </div>
   <div class="cart">
-    <a href="cart.html"><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80"></a>
+    <a href="#cart"><input type="image" src="images/cart_icon.png" alt="Logo" width="80" height="80"></a>
   </div>
 
 
@@ -58,7 +61,7 @@
           <a class="nutrition" href="images/bananainfo.jpg">
             <img src="images/banana.jpg" class="pimage" alt="Banana" width="80" height="80"></a>
           <h1 class="pname">Banana</h1>
-
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -70,6 +73,7 @@
             <img src="images/apple.jpg" class="pimage" alt="Apple" width="80" height="80">
           </a>
           <h1 class="pname">Apple</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.75</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -81,6 +85,7 @@
             <img src="images/strawberry.jpg" class="pimage" alt="Strawberry" width="80" height="80">
           </a>
           <h1 class="pname">Strawberry</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.90</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -92,6 +97,7 @@
             <img src="images/orange.jpg" class="pimage" alt="Orange" width="80" height="80">
           </a>
           <h1 class="pname">Orange</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$0.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -107,6 +113,7 @@
             <img src="images/2milk.jpg" class="pimage" alt="2% Milk" width="80" height="80">
           </a>
           <h1 class="pname">2% <br> Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$2.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -118,6 +125,7 @@
             <img src="images/wholemilk.jpg" class="pimage" alt="wholemilk" width="80" height="80">
           </a>
           <h1 class="pname">Whole <br>Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$2.75</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -129,6 +137,7 @@
             <img src="images/half&half.jpg" class="pimage" alt="Half and Half" width="80" height="80">
           </a>
           <h1 class="pname">Half and <br>Half Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$2.90</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -140,6 +149,7 @@
             <img src="images/chocolatemilk.jpg" class="pimage" alt="chocolatemilk" width="80" height="80">
           </a>
           <h1 class="pname">Chocolate<br> Milk</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$3.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -156,6 +166,7 @@
             <img src="images/applejuice.jpeg" class="pimage" alt="apple juice" width="80" height="80">
           </a>
           <h1 class="pname">Apple juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -167,6 +178,7 @@
             <img src="images/orangejuice.jpg" class="pimage" alt="orange juice" width="80" height="80">
           </a>
           <h1 class="pname">Orange juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -178,6 +190,7 @@
             <img src="images/pineapplejuice.jpg" class="pimage" alt="pineapple juice" width="80" height="80">
           </a>
           <h1 class="pname">Pineapple juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -185,10 +198,11 @@
       <!-- chocolatemilk: $1.50 -->
       <div class="column">
         <div class="card">
-          <a class="nutrition" href="images/mixedfruitjuiceinfo.jpg">
-            <img src="images/mixedfruitjuice.jpg" class="pimage" alt="mixed fruit juice" width="80" height="80">
+          <a class="nutrition" href="images/grapejuiceinfo.jpg">
+            <img src="images/grapejuice.jpg" class="pimage" alt="grape juice" width="80" height="80">
           </a>
-          <h1 class="pname">Mixed fruit juice</h1>
+          <h1 class="pname">Grape juice</h1>
+          <h2 class="drink">Type: Drink</h2>
           <p class="price">$1.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -203,6 +217,7 @@
         <div class="card">
           <img src="images/whitebread.jpg" class="pimage" alt="White bread" width="80" height="80">
           <h1 class="pname">White<br> bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$2.25</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -212,6 +227,7 @@
         <div class="card">
           <img src="images/wheatbread.jpg" class="pimage" alt="wheatbread" width="80" height="80">
           <h1 class="pname">Wheat<br> bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$2.50</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -221,6 +237,7 @@
         <div class="card">
           <img src="images/multigrainbread.jpg" class="pimage" alt="Multi-grain bread" width="80" height="80">
           <h1 class="pname">Multigrain bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$2.90</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -230,6 +247,7 @@
         <div class="card">
           <img src="images/bananabread.jpg" class="pimage" alt="bananabread" width="80" height="80">
           <h1 class="pname">Banana<br> bread</h1>
+          <h2 class="food">Type: Food</h2>
           <p class="price">$3.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -246,6 +264,7 @@
             <img src="images/beer.jpg" class="pimage" alt="Beer" width="80" height="80">
           </a>
           <h1 class="pname">Beer</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$2.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -257,6 +276,7 @@
             <img src="images/vodka.jpg" class="pimage" alt="vodka" width="80" height="80">
           </a>
           <h1 class="pname">Vodka</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$20.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -268,6 +288,7 @@
             <img src="images/whiskey.jpg" class="pimage" alt="whiskey" width="80" height="80">
           </a>
           <h1 class="pname">Whiskey</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$15</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -279,6 +300,7 @@
             <img src="images/rum.jpg" class="pimage" alt="rum" width="80" height="80">
           </a>
           <h1 class="pname">Rum</h1>
+          <h2 class="alcoholic-drink">Type: Alcoholic Drink</h2>
           <p class="price">$18.00</p>
           <button class="add-to-cart" type="button">Add to Cart</button>
         </div>
@@ -287,8 +309,8 @@
   </section>
 
   <!-- section for cart -->
-  <section class="container content-section">
-    <h2 class="section-header">CART</h2>
+  <section class="container-content-section">
+    <h2 class="section-header"><a name="cart">CART</a></h2>
     <div class="cart-row">
       <span class="cart-item cart-header cart-column">ITEM</span>
       <span class="cart-price cart-header cart-column">PRICE</span>
@@ -301,7 +323,7 @@
       <strong class="cart-total-title">Total</strong>
       <span class="cart-total-price">$0</span>
     </div>
-    <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+    <a href="checkout.html"><button class="btn-checkout" type="button">Go to checkout</button></a>
   </section>
   </div>
 </body>
