login page for staff added

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
   <div class="staff-login">
-    <a href="staff-login.html" alt="staff-login" height="80">Staff login</a>
+    <a href="staff-login.php" alt="staff-login" height="80">Staff login</a>
   </div>
   <div class="account">
     <a href="account.html" alt="account" height="80">My Account</a>
