added first and last name

--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+
     <link href="css/signin.css" rel="stylesheet" />
     <script src="login.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -24,6 +24,23 @@
           required
         />
 
+          <label for="fame"><b>Enter First Name</b></label>
+          <input
+            type="text"
+            id="fname"
+            placeholder="Enter First Name"
+            name="fname"
+            required
+          />
+          
+            <label for="lname"><b>Enter Last Name</b></label>
+            <input
+              type="text"
+              id="lname"
+              placeholder="Enter Last Name"
+              name="lname"
+              required
+            />
         <label for="psw"><b>Create a Password</b></label>
         <input
           type="password"
@@ -47,11 +64,11 @@
           me
         </label>
       </div>
-    </form> 
+    </form>
       <!-- <div class="container" style="background-color:black">
         <button type="button" class="cancelbtn">Cancel</button>
       </div>
-   
+
     <!-- <script src="https://www.gstatic.com/firebasejs/7.2.0/firebase-app.js"></script> -->
 
     <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
