fixed sign up issue

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       id="div2"
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
-    <a href="signup.html">Sign UP</a>
+    <a href="signup.php">Sign UP</a>
     </div>
     <br />
   </body>
