--- a/index.html
+++ b/index.html
@@ -37,14 +37,23 @@
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
       <a href="loginpage.php">Sign In</a>
-      
+
     </div>
     <br />
     <div
       id="div2"
       style="font-size:50px;display:none;color:white;text-align: center;"
     >
-    <a href="signup.php">Sign UP</a>
+    <a href="signup.php">Sign Up</a>
+
+    <div
+      id="div1"
+      style="font-size:50px;display:none;color:white;text-align: center;"
+    >
+      <a href="staff-login.php">Staff Login</a>
+
+    </div>
+
     </div>
     <br />
   </body>
