--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         $("button").click(function() {
           $("#div1").fadeIn();
           $("#div2").fadeIn("slow");
-          $("#div3").fadeIn(3000);
+          $("#div3").fadeIn("slow");
         });
       });
     </script>
