tried to make it look more cohesive

--- a/staff-home.html
+++ b/staff-home.html
@@ -1,19 +1,22 @@
-<?php
-session_start();
-require_once('connection.php');
-$_SESSION['customer']=array();
 
-$sql = "select username, address, balance  from  customer ;";
-$result = mysqli_query($con, $sql);
 
-?>
 
-<title>Staff Home</title>
+
+<title>Home</title>
 <link href="css/home.css" rel="stylesheet" />
 <link rel="stylesheet" href="css/staff-home.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="cart.js" async></script>
+<!-- update the version number as needed -->
+<!-- <script defer src="/__/firebase/7.2.0/firebase-app.js"></script> -->
+<!-- include only the Firebase features as you need -->
+<!-- <script defer src="/__/firebase/7.2.0/firebase-auth.js"></script> -->
+<!-- <script defer src="/__/firebase/7.2.0/firebase-database.js"></script> -->
+<!-- <script defer src="/__/firebase/7.2.0/firebase-messaging.js"></script> -->
+<!-- <script defer src="/__/firebase/7.2.0/firebase-storage.js"></script> -->
+<!-- initialize the SDK after all desired features are loaded -->
+<!-- <script defer src="/__/firebase/init.js"></script> -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
@@ -29,35 +32,25 @@ $result = mysqli_query($con, $sql);
 
 <body>
 <div class="imgcontainer">
-<a href="index.html"><img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150" align="left" /><a>
+  <img src="images/D3_logo.png" alt="Logo" class="Logo" width="150" height="150" align="left" />
 </div>
 
 <div class="user">Welcome , <?=$_SESSION['username'] ?> </div>
 <div class="alerter"><?=$_SESSION['username'] ?></div>
 
 <div class="account">
-  <a href="staff-edit.php" alt="account" height="80">Edit Product</a>
+  <a href="staff-account.php" alt="account" height="80">My Account</a>
 </div>
 
 <section class="customers">
-<h2>Customers</h2>
-<p>
-<?php
-echo "<br>";
-echo "<table border='1'>";
-while ($row = mysqli_fetch_assoc($result)) {
-    echo "<tr>";
-    foreach ($row as $value) {
-        echo "<td>" . $value . "</td>";
-    }
-    echo "</tr>";
-}
-echo "</table>";
-?>
-</p>
+<h2>Cutomers with active orders</h2>
+<table>
+
+  </table>
 </section>
 
 
 
 </body>
-</html>
+<!--
+</html> -->
